--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -38,6 +38,7 @@
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
   }
+
   .dark {
     --background: 0 0% 3.9%;
     --foreground: 0 0% 98%;
@@ -72,7 +73,12 @@
   * {
     @apply border-border;
   }
+
   body {
     @apply bg-background text-foreground;
   }
+}
+
+.tile {
+  @apply rounded-md shadow-md bg-dark2 border w-[65px] h-[65px] lg:w-[100px] lg:h-[100px] text-2xl font-bold flex items-center justify-center cursor-pointer;
 }
